# Taoscope

./: .eslintrc.cjs  .gitignore  FEATURES.md  LICENSE  README.md  README.zh-CN.md  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: RELEASE.md
openspec/changes/add-app-shell/: design.md  tasks.md
openspec/changes/archive/2026-05-22-add-app-shell/: proposal.md  tasks.md
openspec/changes/archive/2026-05-22-add-app-shell/specs/app-shell/: spec.md
openspec/changes/archive/2026-05-22-add-mock-datasource/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-22-add-mock-datasource/specs/app-shell/: spec.md
openspec/specs/app-shell/: spec.md
openspec/specs/mock-datasource/: spec.md
scripts/: bump-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/datasource/: db.rs  error.rs  http_client.rs  inflight.rs  mock.rs  mod.rs  sql_builder.rs  state.rs  transport.rs  types.rs  vault.rs  ws_client.rs
src/components/console/: ChartView.tsx  ConsoleDbPicker.tsx  ConsolesPanel.tsx  Editor.tsx  QueryHistoryButton.tsx  RenamableLabel.tsx  ResultCell.tsx  ResultExportBar.tsx  ResultGrid.tsx  ResultPanel.tsx  ResultRow.tsx  ResultTable.tsx  TabBar.tsx  TimezonePicker.tsx  Toolbar.tsx  chartAnalyzer.ts  chartTheme.ts  ddlBuilder.ts  editorBridge.ts  formatCell.tsx  formatScratch.ts  resultExport.ts  rowCapInjector.ts  schemaCache.ts  splitStatements.ts  sqlCompletionSource.ts  sqlContext.ts  sqlEditorTheme.ts  tdengineDialect.ts  useCreateConsole.ts  useEditorSchemaContext.ts  useExecActiveConsole.ts  useExplainActiveConsole.ts  useFormatActiveConsole.ts  useRunActiveConsole.ts
src/components/keyboard/: ConsoleShortcuts.tsx
src/components/layout/: ConnectionFormDialog.tsx  LocaleToggle.tsx  MainArea.tsx  ResourcesPanel.tsx  SchemaPanel.tsx  Sidebar.tsx  StatusBar.tsx  TableDesignerDialog.tsx  TableDetailsDialog.tsx  TitleBar.tsx  treeExpandPersist.ts
src/components/ui/: ConfirmRoot.tsx  alert-dialog.tsx  button.tsx  checkbox.tsx  confirm.ts  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  resizable.tsx  select.tsx  sonner.tsx
src/datasource/: context.tsx  factory.ts  mock.ts  tauri.ts  types.ts
src/lib/: appMenu.ts  i18n.ts  openExternal.ts  platform.ts  timezone.ts  updater.ts
src/locales/en/: common.json  connection.json  console.json  designer.json  menu.json  result.json  updater.json
src/locales/zh-CN/: common.json  connection.json  console.json  designer.json  menu.json  result.json  updater.json
src/state/: displayPrefs.ts
src/store/: appState.ts
(+1 files in other folders)
