[package]
name = "taoscope"
version = "0.1.0"
description = "Taoscope — a desktop manager for TDengine"
authors = ["Taoscope contributors"]
edition = "2021"

[lib]
name = "taoscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
nanoid = "0.4"
regex = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
