[package]
name = "taoscope"
version = "1.3.7"
description = "Taoscope — a desktop manager for TDengine"
authors = ["Taoscope contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "taoscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
nanoid = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
# TDengine official Rust connector — WebSocket transport (rustls).
taos = { version = "0.12", default-features = false, features = ["ws-rustls"] }
# Used directly for per-request timeouts on the ws transport.
tokio = { version = "1", features = ["time"] }
# CancellationToken for the in-flight query registry (add-query-cancel).
tokio-util = { version = "0.7", default-features = false }
# Updater (in-app upgrades). Native installers + ed25519 signature verification.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Opens external URLs (e.g. the GitHub repo link) in the system browser.
tauri-plugin-opener = "2"
tauri-plugin-decorum = "1.1.1"
